--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <body>
         <h1>Il n'est pas destiné à être vu </h1>
         <p>Sauf par accident</p>
+        <p>bye</p>
     </body>
 </html>
